Bug 1641825 - P1 - nsBufferedInputStream does not return error and executes callback on AsyncWait/AsyncLengthWait if stream is closed r=baku,necko-reviewers,mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D77433